--- a/capturing/.gitignore
+++ b/capturing/.gitignore
@@ -13,8 +13,11 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+
+# Include vscode setting files for team development
+# .vscode/*
+# !.vscode/extensions.json
+
 .idea
 .DS_Store
 *.suo
