--- a/capturing/package.json
+++ b/capturing/package.json
@@ -11,18 +11,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0"
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@tauri-apps/api": "^1.3.0",
+    "svelte-fa": "^3.0.4"
   },
   "devDependencies": {
-    "@types/node": "^18.7.10",
-    "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.1",
+    "@tauri-apps/cli": "^1.3.1",
     "@tsconfig/svelte": "^3.0.0",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.0",
-    "svelte-preprocess": "^5.0.0",
-    "tslib": "^2.4.1",
+    "@types/node": "^18.16.16",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.4.3",
+    "svelte-preprocess": "^5.0.4",
+    "tslib": "^2.5.3",
     "typescript": "^4.9.5",
-    "vite": "^4.2.1",
-    "@tauri-apps/cli": "^1.2.3"
+    "vite": "^4.3.9"
   }
 }
