--- a/capturing/src-tauri/Cargo.toml
+++ b/capturing/src-tauri/Cargo.toml
@@ -13,9 +13,10 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["shell-open"] }
+tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "window-maximize", "window-set-decorations", "window-set-size"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+enigo = "0.1.2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
