--- a/capturing/package.json
+++ b/capturing/package.json
@@ -11,6 +11,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@tauri-apps/api": "^1.3.0",
     "svelte-fa": "^3.0.4"
