feat: 選択種別を追加

--- a/capturing/.vscode/settings.json
+++ b/capturing/.vscode/settings.json
@@ -3,5 +3,10 @@
   "cSpell.words": [
     "tauri",
     "Typecheck"
-  ]
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true,
+    "source.organizeImports": true,
+    "source.sortMembers": true
+  }
 }
